--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
       rel="stylesheet"
       href="https://bootswatch.com/5/yeti/bootstrap.min.css"
     />
-    <img src="banner.PNG"> 
-    <img src="slide.PNG"> 
+    <img src="banner.PNG" width="1350" height="600" > 
+    <img src="slide.PNG" width="1350" height="50" > 
   </head>
  <br> <br> <br> <br> 
-  <center><b><h2 class="h2" color="#b72222">Área de Tecnologías de la Información</h2></b></center>
-  <body style=background-color:#f7aaaa>
+  <center><b><h2 class="h2">Área de Tecnologías de la Información</h2></b></center>
+  <br> <br> 
+  <center><b><h2 class="h4">Registra al funcionario público para que pueda recibir atención del Área de Tencologías de la información ATI - Oruro</h4></b></center>
+  <body style=background-image:url(fondo.jpeg)>
     
     <div class="container p-4">
       <div class="row">
@@ -92,7 +94,6 @@
     <!-- importa el js index con todas sus funciones -->
     <script src="./index.js" type="module"></script>
 
-    <img src="footer.PNG"> 
    
   </body>
 </html>
